--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>escalator</title>
+	<script type="application/javascript">
+		if (location.pathname.substr(0, 11) === '/escalator/') {
+			document.write('<base href="/escalator/" />');
+		}
+	</script>
 </head>
 <body>
 <div id="app"></div>
